Itechf Portfolio Website

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://folio.itechf.com
-baseurl: '/agency-jekyll-theme/'
+baseurl: ''
 
 # Site settings
 title: Modern Web solutions for your Business
